Fix Categories in desktop file

--- a/data/com.github.hugolabe.Wike.desktop.in
+++ b/data/com.github.hugolabe.Wike.desktop.in
@@ -5,6 +5,6 @@ Icon=com.github.hugolabe.Wike
 Exec=wike
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Internet;
+Categories=Network;GTK;
 Keywords=Wikipedia;Encyclopedia;
 StartupNotify=true
