--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -50,6 +50,15 @@
   </screenshots>
 
   <releases>
+    <release version="1.1.1" date="2021-04-14">
+      <description>
+        <ul>
+          <li>Added French translation.</li>
+          <li>Added Italian translation.</li>
+          <li>Fix Categories in desktop file.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.1.0" date="2021-04-12">
       <description>
         <ul>
