--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -50,6 +50,13 @@
   </screenshots>
 
   <releases>
+    <release version="1.3.0" date="2021-04-28">
+      <description>
+        <ul>
+          <li>Added option to use custom font in article view.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.2.1" date="2021-04-22">
       <description>
         <ul>
