--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -50,6 +50,14 @@
   </screenshots>
 
   <releases>
+    <release version="1.3.1" date="2021-05-07">
+      <description>
+        <ul>
+          <li>Article view improvements.</li>
+          <li>Updated French translation.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.3.0" date="2021-04-28">
       <description>
         <ul>
