--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -50,6 +50,17 @@
   </screenshots>
 
   <releases>
+    <release version="1.3.2" date="2021-05-08">
+      <description>
+        <ul>
+          <li>Added Ctrl+K shortcut to search articles.</li>
+          <li>Increased maximum font size.</li>
+          <li>Fixed missing icon in some desktops.</li>
+          <li>Added Portuguese (BR) translation.</li>
+          <li>Updated German translation.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.3.1" date="2021-05-07">
       <description>
         <ul>
