--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -50,6 +50,14 @@
   </screenshots>
 
   <releases>
+    <release version="1.3.3" date="2021-05-13">
+      <description>
+        <ul>
+          <li>Added Greek translation.</li>
+          <li>Updated Italian translation.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.3.2" date="2021-05-08">
       <description>
         <ul>
