--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -54,6 +54,14 @@
   </screenshots>
 
   <releases>
+    <release version="1.4.0" date="2021-05-21">
+      <description>
+        <ul>
+          <li>Added dark mode.</li>
+          <li>Updated Spanish translation.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.3.3" date="2021-05-13">
       <description>
         <ul>
