Add GNOME Shell search provider

--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,13 @@ python = import('python')
 pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
 moduledir = join_paths(pkgdatadir, meson.project_name())
 
+conf = configuration_data()
+conf.set('PYTHON', python.find_installation().path())
+conf.set('VERSION', meson.project_version())
+conf.set('BIN', join_paths(get_option('prefix'), get_option('bindir'), meson.project_name()))
+conf.set('pkgdatadir', pkgdatadir)
+conf.set('localedir', join_paths(get_option('prefix'), get_option('localedir')))
+
 subdir('data')
 subdir('src')
 subdir('po')
