Update AppStream metadata description

--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -24,6 +24,7 @@
       <li>Text search in articles</li>
       <li>Article table of contents</li>
       <li>View article in other languages</li>
+      <li>GNOME Shell search integration</li>
       <li>Dark mode</li>
     </ul>
   </description>
