--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -5,7 +5,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <name>Wike</name>
-  <summary>Wikipedia Reader</summary>
+  <summary>Search and read Wikipedia articles</summary>
 
   <description>
     <p>
