--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -17,6 +17,7 @@
       Features:
     </p>
     <ul>
+      <li>Open multiple articles in tabs</li>
       <li>Multiple languages</li>
       <li>Search suggestions</li>
       <li>List of recent articles</li>
@@ -38,7 +39,7 @@
       <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-01-main.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-02-languages.png</image>
+      <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-02-tabs.png</image>
     </screenshot>
     <screenshot>
       <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-03-toc.png</image>
@@ -47,10 +48,7 @@
       <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-04-bookmarks.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-05-text.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-06-dark.png</image>
+      <image>https://raw.githubusercontent.com/hugolabe/wike/master/data/screenshots/wike-05-dark.png</image>
     </screenshot>
   </screenshots>
 
