--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -238,7 +238,7 @@
     </release>
   </releases>
 
-  <url type="homepage">https://github.com/hugolabe/Wike</url>
+  <url type="homepage">https://hugolabe.github.io/Wike/</url>
   <url type="translate">https://poeditor.com/join/project?hash=kNgJu4MAum</url>
   <developer_name>Hugo Olabera</developer_name>
   <update_contact>hugolabe@gmail.com</update_contact>
