--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -26,7 +26,7 @@
       <li>Article table of contents</li>
       <li>View article in other languages</li>
       <li>GNOME Shell search integration</li>
-      <li>Dark mode</li>
+      <li>Light, dark and sepia themes</li>
     </ul>
   </description>
 
