Update POT template

--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -17,7 +17,7 @@
       It supports more than 300 languages and integrates with desktop searches,
       providing suggestions that make it easier to find any content.
       Other features are: bookmarks with multiple lists, article table of contents,
-      history, text searches and much more ...
+      history, text searches and much more…
     </p>
   </description>
 
