--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -44,6 +44,15 @@
   </screenshots>
 
   <releases>
+    <release version="2.0.1" date="2023-04-23">
+      <description>
+        <ul>
+          <li>Bug fixes.</li>
+          <li>Small UI tweaks.</li>
+          <li>Updated translations.</li>
+        </ul>
+      </description>
+    </release>
     <release version="2.0.0" date="2023-04-12">
       <description>
         <p>This version brings a major revamp to the user interface and also introduces some new features. These are the main novelties:</p>
