--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -364,6 +364,8 @@
 
   <url type="homepage">https://hugolabe.github.io/Wike/</url>
   <url type="bugtracker">https://github.com/hugolabe/Wike/issues</url>
+  <url type="contribute">https://hugolabe.github.io/Wike/#foss</url>
+  <url type="vcs-browser">https://github.com/hugolabe/Wike</url>
   <url type="translate">https://poeditor.com/join/project?hash=kNgJu4MAum</url>
   <developer_name>Hugo Olabera</developer_name>
   <update_contact>hugolabe@gmail.com</update_contact>
