--- a/src/wike-sp.in
+++ b/src/wike-sp.in
@@ -83,6 +83,10 @@ class WikeSearchService:
         text = text.split(' ', 1)[1]
       else:
         text = ''
+    elif ':' in text:
+      for available_lang in languages.wikilangs.keys():
+        if text.startswith(available_lang + ':'):
+          lang, text = text.split(':', 1)
 
     if len(text) > 2:
       if settings.get_boolean('search-desktop'):
