--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -43,6 +43,11 @@
     </screenshot>
   </screenshots>
 
+  <branding>
+    <color type="primary" scheme_preference="light">#dbeede</color>
+    <color type="primary" scheme_preference="dark">#3b608c</color>
+  </branding>
+
   <releases>
     <release version="2.1.0" date="2023-12-04">
       <description translatable="no">
@@ -380,7 +385,7 @@
   <!-- developer_name tag deprecated with Appstream 1.0 -->
   <developer_name translatable="no">Hugo Olabera</developer_name>
   <developer id="github.com">
-      <name translatable="no">Hugo Olabera</name>
+    <name translatable="no">Hugo Olabera</name>
   </developer>
   <update_contact>hugolabe@gmail.com</update_contact>
 </component>
