--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -384,7 +384,7 @@
   <url type="translate">https://poeditor.com/join/project?hash=kNgJu4MAum</url>
   <!-- developer_name tag deprecated with Appstream 1.0 -->
   <developer_name translatable="no">Hugo Olabera</developer_name>
-  <developer id="github.com">
+  <developer id="io.github.hugolabe">
     <name translatable="no">Hugo Olabera</name>
   </developer>
   <update_contact>hugolabe@gmail.com</update_contact>
